--- a/package.json
+++ b/package.json
@@ -76,7 +76,6 @@
     "typescript": "^4.5.2",
     "url-loader": "4.1.1",
     "web-vitals": "^1.1.2",
-    "webpack": "4.44.2",
     "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "5.1.4"
@@ -108,7 +107,8 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.17",
     "tsconfig-paths": "^3.12.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2"
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "webpack": "^4.44.2"
   },
   "jest": {
     "roots": [
