--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-redux": "^7.2.6",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^6.0.2",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "resolve": "1.18.1",
